--- a/endlr.html
+++ b/endlr.html
@@ -1136,7 +1136,7 @@ h3{
 <script>
 
     function playbg(){
-        //bg.play()
+        bg.play()
     }
 
     var right = document.getElementsByClassName("right");
